2003-03-14  Dave Camp  <dave@ximian.com>

	* libgnomevfs/gnome-vfs-job.c (_gnome_vfs_job_destroy_notify_result): 
	Remove the unnecessary g_warning here.

2003-03-14  Joël Brich <joel.brich@laposte.net>

	* configure.in: Added "eo" to ALL_LINGUAS.

2003-03-14  Michael Meeks  <michael@server.home>

	* test/test-shell.c (do_ssl): impl.
	(main, list_commands): upd.

2003-03-14  Alexander Larsson  <alexl@redhat.com>

	* Makefile.am:
	Remove hardcoded ACLOCAL_AMFLAGS.
	Please do not make changes to modules without
	permission from the maintainer.

==== gnome-vfs 2.2.3 ====
	
2003-03-10  Alexander Larsson  <alexl@redhat.com>

	* NEWS: 
	* configure.in:
	Bump to 2.2.3

2003-03-05  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Try pkg-config for detecting openssl.
	Add --disable-openssl to not use openssl
	Add --enable-gnutls to enable gnutls.

2003-02-25  Taneem Ahmed  <taneem@eyetap.org>

	* configure.in: Added "bn" to ALL_LINGUAS.

2003-02-24  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-job.c (_gnome_vfs_job_destroy_notify_result): 
	Turn crash into g_warning for smb: module callback bug. This needs
	looking into. I'm not sure what is happening here.
	
2003-02-24  Alexander Larsson  <alexl@redhat.com>

	* modules/file-method.c (do_read_directory):
	Actually make the non-readdir_r case work.

2003-02-24  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-monitor.c (destroy_monitor_handle):
	Warn if the handle was not in the hash table.
	(gnome_vfs_monitor_callback):
	Loop to get the hashtable. This fixes a possible race where
	there is a callback before the add_monitor code has added the
	monitor to the hashtable. (#106758)

2003-02-21  Alexander Larsson  <alexl@redhat.com>

	* monikers/Makefile.am:
	Assign CLEANFILES with normal assignment

	* libgnomevfs/Makefile.am:
	Remove commented out lines that were confusing automake.
	
2003-02-20  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-job.h: